GlobalImageUploadModal set up to fix z-index bug

--- a/src/styles/components/PostList.module.scss
+++ b/src/styles/components/PostList.module.scss
@@ -1,7 +1,6 @@
 @import '@styles/Variables';
 
 .wrapper {
-    position: relative;
     padding: 0 20px;
     width: 800px;
     
