--- a/src/styles/pages/SpacePage/SpacePagePosts.module.scss
+++ b/src/styles/pages/SpacePage/SpacePagePosts.module.scss
@@ -4,8 +4,6 @@
     margin-bottom: 10px;
 
     .content {
-        position: relative;
-
         .postListView {
             width: 1215px;
         }
